--- a/TODO
+++ b/TODO
@@ -19,6 +19,9 @@ $Id$
 *********************************************************************
 *** not fixed yet:
 *********************************************************************
+- add some more folder properties to config dialog, i.e. be able to
+  switch off automatic notification of incoming emails.
+  Currently, coying emails to another folder produces "New Mail" dialogs.
 - fix my OpenAnyFolderDialog to take hostname and folderpath, as
   required for imap
 - wxListCtrl selection gets reset if message has to be fetched, if it 
@@ -335,6 +338,7 @@ classes in the hierarchy.
 *********************************************************************
 *** Fixed and tested:
 *********************************************************************
+
  - help fails to find copyright
  - .mo files should be found in M_BASEDIR/locale
  - toolbars need to be a bit higher
